# fsac_rise

./: README.md
CAN_control/yhs_can_control/: CMakeLists.txt  package.xml
CAN_control/yhs_can_control/launch/: yhs_can_control.launch
CAN_control/yhs_can_control/src/: Stop.cpp  pure_pursuit.cpp  yhs_can_control.cpp
CAN_control/yhs_can_msgs/: CMakeLists.txt
CAN_control/yhs_can_msgs/msg/: lr_wheel_fb.msg  rr_wheel_fb.msg
common/fsd_common_msgs/msg/: Map.msg
common/yhs_can_msgs/msg/: ctrl_fb.msg  vehicle_status.msg
control/controller/src/: control.cpp  control_handle.cpp
estimation/RTK_CAN/src/: README.md
estimation/RTK_CAN/src/rtk/: CMakeLists.txt  README.md  package.xml
estimation/RTK_CAN/src/rtk/config/: static_tf.yaml
estimation/RTK_CAN/src/rtk/include/rtk/: can_odometry_core.h  can_vehicle_info.h  rtk_control.h
estimation/RTK_CAN/src/rtk/include/yhs_can_control/: yhs_can_control.h
estimation/RTK_CAN/src/rtk/launch/: rtk_start.launch  rtk_start_fssim.launch
estimation/RTK_CAN/src/rtk/src/: can_odometry_core.cpp  can_odometry_core_fssim.cpp  can_odometry_core_订阅左右轮速信息.cpp  can_odometry_node.cpp  rtk_control.cpp  yhs_can_control.cpp
estimation/robot_localization/: CMakeLists.txt
estimation/robot_localization/launch/: ekf_odom.launch
estimation/robot_localization/params/: ekf_odom.yaml  ekf_template.yaml
estimation/robot_localization/src/: ros_filter.cpp
fasc_CAN_control/: README.md
fasc_CAN_control/fasc_can_control/: CMakeLists.txt
fasc_CAN_control/fasc_can_control/config/: vehicle_basis_info.yaml
fasc_CAN_control/fasc_can_control/launch/: fsac_can_control.launch
fasc_can_control/: CMakeLists.txt  package.xml
fasc_can_control/include/yhs_can_control/: yhs_can_control.h
fasc_can_control/src/: yhs_can_control.cpp
perception/camera/: CMakeLists.txt  package.xml
perception/camera/config/: detection.yaml
perception/camera/launch/: perception.launch
perception/camera/script/: detect.py  hikrobot_camera.py  hikrobot_camera_2.py  hikrobot_camera_left.py  hikrobot_camera_right.py  left_camera.py  multi_camera_detection.py  right_camera.py  rviz.py
perception/camera/src/: yolov4_tiny_cone_detection.cpp
perception/camera/src/HIKROBOT_camera/include/: hikrobot_camera.h
perception/camera/src/HIKROBOT_camera/src/: hikrobot_camera.cpp
perception/camera/src/yolov4_tiny_track/: predict.py  sort.py  voc_annotation.py  yolo.py
perception/camera/src/yolov4_tiny_track/nets/: attention.py
perception/lidar_euclidean_cluster_detect/: CMakeLists.txt
perception/script/: hkrobot.py  hkrobot_opencv.py  main_debug.py  rviz.py  track.py
perception/yolov4_tiny_track/: predict.py  sort.py  track.py  voc_annotation.py  yolo.py
planning/line_detector/: CMakeLists.txt  package.xml
script/: odm.py  odom_data.yaml  run_camera.sh  run_fsac.sh  run_rs.sh
script/script/: GPS_serial.py  calibrate  run.sh  run_rs.sh  topic_transmit.py
(+37 files in other folders)
